 
 New functions:
 ==============

 ** friedman (fully Matlab compatible)
 
 ** ranksum (fully Matlab compatible. bug #42079)
    tiedrank
    
 ** anova2 (fully Matlab compatible)
 
 ** mean (fully Matlab compatible, it shadows mean from core Octave)
          
 ** fillmissing (patch #10102)

 ** standardizeMissing (patch #10102)

 Improvements:
 =============
 
 
 ** binopdf.m: implement high accuracy Loader algorithm for m>=10 (bug #34362)
 
 ** violin.m: fix parsing color vector affecting Octave>=6.1.0 (bug #62805)
 
 ** cdf.m: extended to include all available distributions
    pdf.m
    
 ** pdist.m: updated the 'cosine' metric to be more efficient (bug #62495)
 
 ** harmmean.m: fully Matlab compatible.
 
 ** geomean.m: fully Matlab compatible. (patch #59410)
 
 ** wblplot.m: fixed coding style and help texinfo. (patch #8579)
 
 ** ismissing.m: corrects handling of n-D arrays, NaN indicators, and improves
    matlab compatibility for different data types. (patch #10102)

 ** rmmissing.m: corrects cellstr array handling and
    improves matlab compatibility for different data types. (patch #10102)
    
 Removed Functions:
 ==================
 
 ** wilcoxon_test (replaced by ranksum)
 
 ** kruskal_wallis_test (replaced by kruskalwallis)
 
 Available Data Sets:
 ====================
 
 ** acetylene     Chemical reaction data with correlated predictors
 ** arrhythmia    Cardiac arrhythmia data from the UCI machine learning repository
 ** carbig        Measurements of cars, 1970–1982
 ** carsmall      Subset of carbig. Measurements of cars, 1970, 1976, 1982
 ** cereal        Breakfast cereal ingredients
 ** examgrades    Exam grades on a scale of 0–100
 ** fisheriris    Fisher's 1936 iris data
 ** hald          Heat of cement vs. mix of ingredients
 ** kmeansdata    Four-dimensional clustered data
 ** mileage       Mileage data for three car models from two factories
 ** morse         Recognition of Morse code distinctions by non-coders